unpackaged/main/default/objects/Opportunity_Approval_Matrix__c/Opportunity_Approval_Matrix__c.object-meta.xml
<CustomObject>
    <description>Stores information used for dynamic approval routing.</description>
    <label>Opportunity Approval Matrix</label>
    <nameField>
        <displayFormat>OAM-{00000}</displayFormat>
        <label>Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Approval Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>