unpackaged/main/default/objects/Opportunity_Approval_Matrix__c/fields/Business_Approver__c.field-meta.xml
<CustomField>
    <fullName>Business_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Approval_Matrixes1</relationshipName>
    <type>Lookup</type>
</CustomField>