unpackaged/main/default/objects/Opportunity_Approval_Matrix__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>EMEIA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Nordics</fullName>
            </value>
            <value>
                <fullName>Central &amp; Eastern Europe</fullName>
            </value>
            <value>
                <fullName>Middle East &amp; Asia</fullName>
            </value>
            <value>
                <fullName>France &amp; Benelux</fullName>
            </value>
            <value>
                <fullName>Southern Europe</fullName>
            </value>
            <value>
                <fullName>Central Europe</fullName>
            </value>
            <value>
                <fullName>UK &amp; Ireland &amp; NA</fullName>
            </value>
            <value>
                <fullName>Nordics &amp; Russia</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>MEA</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>