unpackaged/main/default/objects/Opportunity_Approval_Matrix__c/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Approval_Matrixes</relationshipName>
    <type>Lookup</type>
</CustomField>