unpackaged/main/default/objects/Opportunity_Approval_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cluster__c</columns>
    <columns>Vertical__c</columns>
    <columns>Business_Approver__c</columns>
    <columns>Finance_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>